RESOLVED FIXED160431
<attachment> action label doesn't wrap, but needs to for some localizations
https://bugs.webkit.org/show_bug.cgi?id=160431
Summary <attachment> action label doesn't wrap, but needs to for some localizations
Tim Horton
Reported 2016-08-01 15:45:38 PDT
<attachment> action label doesn't wrap, but needs to for some localizations
Attachments
Patch (9.97 KB, patch)
2016-08-01 15:46 PDT, Tim Horton
no flags
Patch (11.27 KB, patch)
2016-08-01 16:02 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2016-08-01 15:46:21 PDT
Tim Horton
Comment 2 2016-08-01 15:53:42 PDT
Probably will need to skip the test on Mac, where action isn't a thing, so these won't mismatch.
Tim Horton
Comment 3 2016-08-01 16:02:45 PDT
Tim Horton
Comment 4 2016-08-01 16:04:06 PDT
Tim Horton
Comment 5 2016-08-01 18:40:57 PDT
Note You need to log in before you can comment on or make changes to this bug.